# Graph-MCP

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/graph_mcp/: __init__.py  __main__.py  _select_fields.py  auth.py  config.py  exceptions.py  graph_client.py  rate_limiter.py  responses.py  server.py  token_store.py
src/graph_mcp/tools/: __init__.py  auth_tools.py  calendar_tools.py  chat_tools.py  files_tools.py  mail_tools.py  meeting_tools.py  message_tools.py  presence_tools.py  profile_tools.py  search_tools.py  teams_tools.py  user_tools.py
