[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-mcp"
version = "0.4.1"
description = "MCP server for Microsoft Teams, Outlook Calendar, and Mail via Microsoft Graph API"
readme = "README.md"
authors = [
    { name = "JustStas" }
]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
]

[project.scripts]
graph-mcp = "graph_mcp:main"

[project.urls]
Homepage = "https://github.com/JustStas/Graph-MCP"
Repository = "https://github.com/JustStas/Graph-MCP.git"
